🐛 Prevent line breaks at some resolution

--- a/styles/components/_gnb-nav.scss
+++ b/styles/components/_gnb-nav.scss
@@ -8,6 +8,7 @@
   }
 
   &-item {
+    flex-shrink: 0;
     margin-right: 24px - ($padding * 2);
 
     &.is-active,
